# ElC-OIS

./: .gitignore  README.md  installation.sh  ois_framework.py
pc_cluster/ellipsoidal_clustering/: CMakeLists.txt  main.cpp
